[gd_scene load_steps=3 format=2]

[ext_resource path="res://theme.tres" type="Theme" id=1]
[ext_resource path="res://ui/Lobby.gd" type="Script" id=2]

[node name="Lobby" type="Panel"]
unique_name_in_owner = true
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -104.0
margin_top = -84.0
margin_right = 104.0
margin_bottom = 84.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="NetworkSetupScreen" type="VBoxContainer" parent="."]
unique_name_in_owner = true
anchor_right = 1.0
anchor_bottom = 1.0

[node name="NameEdit" type="LineEdit" parent="NetworkSetupScreen"]
unique_name_in_owner = true
margin_right = 208.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "username"
placeholder_text = "enter name here"

[node name="PlayerList" type="ItemList" parent="NetworkSetupScreen"]
unique_name_in_owner = true
margin_top = 22.0
margin_right = 208.0
margin_bottom = 146.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="RoomCodeDisplay" type="LineEdit" parent="NetworkSetupScreen"]
unique_name_in_owner = true
visible = false
margin_top = 125.0
margin_right = 208.0
margin_bottom = 146.0
align = 1
editable = false

[node name="NetworkStartButton" type="Button" parent="NetworkSetupScreen"]
unique_name_in_owner = true
visible = false
margin_top = 126.0
margin_right = 208.0
margin_bottom = 146.0
rect_min_size = Vector2( 0, 20 )
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.45
text = "start"

[node name="ConnectContainer" type="HBoxContainer" parent="NetworkSetupScreen"]
unique_name_in_owner = true
margin_top = 147.0
margin_right = 208.0
margin_bottom = 168.0
rect_min_size = Vector2( 0, 21 )

[node name="HostContainer" type="HBoxContainer" parent="NetworkSetupScreen/ConnectContainer"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 21.0
size_flags_vertical = 3

[node name="HostButton" type="Button" parent="NetworkSetupScreen/ConnectContainer/HostContainer"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 21.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 3
size_flags_vertical = 3
text = "host"

[node name="JoinContainer" type="HBoxContainer" parent="NetworkSetupScreen/ConnectContainer"]
unique_name_in_owner = true
margin_left = 41.0
margin_right = 208.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="JoinButton" type="Button" parent="NetworkSetupScreen/ConnectContainer/JoinContainer"]
unique_name_in_owner = true
margin_right = 40.0
margin_bottom = 21.0
rect_min_size = Vector2( 40, 0 )
size_flags_horizontal = 0
size_flags_vertical = 3
text = "join"

[node name="IPEdit" type="LineEdit" parent="NetworkSetupScreen/ConnectContainer/JoinContainer"]
unique_name_in_owner = true
margin_left = 41.0
margin_right = 120.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.46
text = "67.171.216.91"
placeholder_text = "IP"

[node name="RoomCodeEdit" type="LineEdit" parent="NetworkSetupScreen/ConnectContainer/JoinContainer"]
unique_name_in_owner = true
visible = false
margin_left = 41.0
margin_right = 120.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 3.46
placeholder_text = "Room Code"

[node name="PortEdit" type="LineEdit" parent="NetworkSetupScreen/ConnectContainer/JoinContainer"]
unique_name_in_owner = true
margin_left = 121.0
margin_right = 167.0
margin_bottom = 21.0
size_flags_horizontal = 3
size_flags_stretch_ratio = 2.0
text = "1209"
placeholder_text = "port"

[node name="NetworkErrorLabel" type="Label" parent="."]
unique_name_in_owner = true
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 5.0
margin_bottom = 42.0
